# application/config/routes.php
@@ -64,8 +64,8 @@ $route['api/events/(:num)']         = 'rest/event/details/$1';
 $route['api/events/(:num)/message'] = 'rest/event/message/$1';
 $route['api/events/nearest']        = 'rest/event/nearest_by_coords';
 $route['api/events/search']         = 'rest/event/search';
-$route['api/profile/activate']      = 'rest/user/status/1';
-$route['api/profile/deactivate']    = 'rest/user/status/0';
+$route['api/profile/settings']      = 'rest/user/settings';
+//$route['api/profile/deactivate']    = 'rest/user/status/0';
 
 $route['(:any)/ajax_(:any)']        = '$1/ajax/$2';
 
